@@ -488,6 +488,10 @@ BUG FIXES
     o	pchisq(x, df=0) was always one even for x < 0; similarly for
 	pgamma(x, alpha=0).
 
+    o	add1() and drop1() now return a P-value of NaN in cases with
+	df=0 for test="Chisq" (they gave NaN until pchisq was altered
+	in R 2.6.2).
+
 
 
 		CHANGES IN R VERSION 2.7.1
